# grug-analyzer

./: README.md  pyproject.toml  runtime-analyser.py
examples/: fastapi-routes.py
examples/test-service/app/: main.py  models.py
grug-analyser/: run.py  util.py
grug-analyser/mocking/: __init__.py  mock_environ.py  mock_import.py
gruganalyser/: __init__.py  run.py  runners.py  util.py
gruganalyser/mocking/: __init__.py  mock_environ.py  mock_import.py
gruganalyser/runners/: abstract.py  runners.py
gruganalyzer/: __init__.py  run.py
gruganalyzer/mocking/: __init__.py  mock_environ.py  mock_import.py
gruganalyzer/runners/: __init__.py  runners.py
